--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -82,7 +82,6 @@ jobs:
             **Full Changelog**: https://github.com/${{ github.repository }}/compare/v${{ steps.get_version.outputs.version }}
           draft: false
           prerelease: false
-          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -105,10 +104,6 @@ jobs:
             rust_target: 'x86_64-pc-windows-msvc'
 
     runs-on: ${{ matrix.platform }}
-    outputs:
-      darwin_sig: ${{ steps.extract_sig.outputs.darwin_sig }}
-      windows_sig: ${{ steps.extract_sig.outputs.windows_sig }}
-      linux_sig: ${{ steps.extract_sig.outputs.linux_sig }}
     
     steps:
       - uses: actions/checkout@v4
@@ -143,7 +138,7 @@ jobs:
       
       - name: Extract Signature (macOS)
         if: matrix.platform == 'macos-latest'
-        id: extract_sig
+        id: extract_sig_macos
         run: |
           SIG_FILE=$(find desktop-app2/src-tauri/target -name "*.app.tar.gz.sig" | head -n 1)
           if [ -f "$SIG_FILE" ]; then
@@ -156,7 +151,7 @@ jobs:
       
       - name: Extract Signature (Windows)
         if: matrix.platform == 'windows-latest'
-        id: extract_sig
+        id: extract_sig_windows
         shell: pwsh
         run: |
           $SigFile = Get-ChildItem -Path "desktop-app2\src-tauri\target" -Recurse -Filter "*.nsis.zip.sig" | Select-Object -First 1
@@ -170,7 +165,7 @@ jobs:
       
       - name: Extract Signature (Linux)
         if: matrix.platform == 'ubuntu-22.04'
-        id: extract_sig
+        id: extract_sig_linux
         run: |
           SIG_FILE=$(find desktop-app2/src-tauri/target -name "*.AppImage.tar.gz.sig" | head -n 1)
           if [ -f "$SIG_FILE" ]; then
