--- a/.github/workflows/release-desktop-app.yml
+++ b/.github/workflows/release-desktop-app.yml
@@ -131,22 +131,21 @@ jobs:
       - name: Debug - Check if secrets are available
         run: |
           echo "Checking if TAURI secrets are available..."
-          if [ -z "${{ secrets.TAURI_PRIVATE_KEY }}" ]; then
-            echo "ERROR: TAURI_PRIVATE_KEY is not set!"
+          if [ -z "${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}" ]; then
+            echo "ERROR: TAURI_SIGNING_PRIVATE_KEY is not set!"
             exit 1
           else
-            echo "✓ TAURI_PRIVATE_KEY is set (length: ${#TAURI_PRIVATE_KEY})"
+            echo "✓ TAURI_SIGNING_PRIVATE_KEY is set (length: ${#TAURI_SIGNING_PRIVATE_KEY})"
           fi
           
-          if [ -z "${{ secrets.TAURI_KEY_PASSWORD }}" ]; then
-            echo "ERROR: TAURI_KEY_PASSWORD is not set!"
-            exit 1
+          if [ -z "${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}" ]; then
+            echo "WARNING: TAURI_SIGNING_PRIVATE_KEY_PASSWORD is not set (using key without password)"
           else
-            echo "✓ TAURI_KEY_PASSWORD is set"
+            echo "✓ TAURI_SIGNING_PRIVATE_KEY_PASSWORD is set"
           fi
         env:
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         shell: bash
       
       - name: Build Tauri App with Signing
@@ -154,8 +153,8 @@ jobs:
         run: npm run tauri:build -- ${{ matrix.args }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
       
       - name: Debug - List all generated files
         run: |
